[feat/TK-141]: 정산참여멤버 필드에 멤버 ID 추가